--- a/GridDataDisplay/Views/Item/Edit.cshtml
+++ b/GridDataDisplay/Views/Item/Edit.cshtml
@@ -40,9 +40,13 @@
 
             </div>
                 <div class="form-group btn-block col-md-12">
-                    <button type="submit" value="Save" class="btn btn-success btn-md col-md-3">Save</button>
-                    <button type="reset" value="Clear" class="btn btn-default btn-md col-md-3"> Clear</button>
-                  
+                    <!--FOR MULTIPLE SUBMIT BUTTONS-->
+                  <!--  <button type="submit" value="Save" class="btn btn-success btn-md col-md-3" name="action:Save">Save</button>
+                    <button type="submit" value="Clear" class="btn btn-default btn-md col-md-3" name="action:Clear"> Clear</button>
+                  -->
+
+                    <button type="submit" value="Save" class="btn btn-success btn-md col-md-3" name="submit">Save</button>
+                    <button type="submit" value="Clear" class="btn btn-default btn-md col-md-3" name="submit"> Clear</button>
                 </div>
             </div>
  
