--- a/GridDataDisplay/Views/Item/Display.cshtml
+++ b/GridDataDisplay/Views/Item/Display.cshtml
@@ -64,5 +64,5 @@
 
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-    @Html.PagedListPager(Model, page => Url.Action("Display", new { page , sortOrder = ViewBag.CurrentSort, sortParam = ViewBag.SortParam }))
+    @Html.PagedListPager(Model, page => Url.Action("Display", new { page, sortParam = ViewBag.SortParam, sortOrder = ViewBag.CurrentSort }))
 </div>
